objects/Sub_Panel__c.object
<CustomObject>
    <fields>
        <fullName>Another_Sub_Panel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Sub Panel?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Sub Panels</relationshipLabel>
        <relationshipName>Sub_Panels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Knock_Out_for_Tie_in_ID__c</fullName>
        <description>Knock-Out for Tie-in/Load Relocation DRAW on PIC:</description>
        <inlineHelpText>Knock-Out for Tie-in/Load Relocation DRAW on PIC:</inlineHelpText>
        <label>Knock-Out for Tie-in ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knock_Out_for_Tie_in_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knock-Out for Tie-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_of_Sub1__c</fullName>
        <label>Location of Sub1</label>
        <picklist>
            <picklistValues>
                <fullName>garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pantry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in side home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hallway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>attic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>basement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Breaker_or_Feeder_Breaker_Size__c</fullName>
        <label>Main Breaker (or Feeder Breaker) Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_POI__c</fullName>
        <label>Preferred POI?</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Space_for_PV_Backfeed__c</fullName>
        <label>Space for PV Backfeed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub1_3_Pic_ID__c</fullName>
        <label>Sub1 3&apos; Pic ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_3_Pic_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 3&apos; Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Brand__c</fullName>
        <label>Sub1 Brand</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutler Hammer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Squar D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bryant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westinghouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pushmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulldogg Pushmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zinsco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murry</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub1_Dead_Front_Off_Overall_ID__c</fullName>
        <label>Sub1 Dead Front Off - Overall ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_Dead_Front_Off_Overall_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 Dead Front Off - Overall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Dead_Front_Off_Top_ID__c</fullName>
        <label>Sub1 Dead Front Off - Top ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_Dead_Front_Off_Top_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 Dead Front Off - Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Dead_Front_On_Overall_Picture_ID__c</fullName>
        <label>Sub1 Dead Front On / Overall Picture ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_Dead_Front_On_Overall_Picture_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 Dead Front On / Overall Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Electrical_Notes__c</fullName>
        <label>Sub1 Electrical Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub1_Issues_ID__c</fullName>
        <description>Sub1 Issues? Burnt Buss bar, Double Taps:</description>
        <inlineHelpText>Sub1 Issues? Burnt Buss bar, Double Taps:</inlineHelpText>
        <label>Sub1 Issues ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_Issues_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Label_Shot_1_ID__c</fullName>
        <label>Sub1 Label Shot 1 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_Label_Shot_1_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 Label Shot 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Label_Shot_2_ID__c</fullName>
        <label>Sub1 Label Shot 2 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_Label_Shot_2_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 Label Shot 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Label_Shot_3_ID__c</fullName>
        <label>Sub1 Label Shot 3 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_Label_Shot_3_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 Label Shot 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Line_Conductor_Size_Picture_ID__c</fullName>
        <label>Sub1 Line Conductor Size Picture ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub1_Line_Conductor_Size_Picture_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub1 Line Conductor Size Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub1_Line_Conductor_Size__c</fullName>
        <label>Sub1 Line Conductor Size:</label>
        <picklist>
            <picklistValues>
                <fullName>#6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub1_Line_Conductor_Type__c</fullName>
        <label>Sub1 Line Conductor Type</label>
        <picklist>
            <picklistValues>
                <fullName>CU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub1_Panel_Rating__c</fullName>
        <label>Sub1 Panel Rating</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub1_Site_Notes__c</fullName>
        <label>Sub1 Site Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Pic_Part_1_ID__c</fullName>
        <label>Sub Pic Part 1 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Pic_Part_1_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Pic Part 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Pic_Part_2_ID__c</fullName>
        <label>Sub Pic Part 2 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Pic_Part_2_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Pic Part 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Pic_Part_3_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Pic Part 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Pic_Part_4_ID__c</fullName>
        <label>Sub Pic Part 4 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sun_Pic_Part_3_ID__c</fullName>
        <label>Sun Pic Part 3 ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X20_Pull_back_of_Sub1_area_ID__c</fullName>
        <label>20&apos; Pull back of Sub1 area ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X20_Pull_back_of_Sub1_area_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>20&apos; Pull back of Sub1 area</label>
        <type>Checkbox</type>
    </fields>
    <label>Sub Panel</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Sub Panel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>